confddir = $(sysconfdir)/lcopy/conf.d
dist_confd_DATA = \
	\
	ConsoleKit,trunk.lcopy \
	Kahua,trunk.lcopy \
	anaconda,trunk.lcopy \
	autoconf,trunk.lcopy \
	automake,trunk.lcopy \
	binutils,trunk.lcopy \
	biwascheme,trunk.lcopy \
	cairo,trunk.lcopy \
	cluster,trunk.lcopy \
	corosync,trunk.lcopy \
	cygwin,trunk.lcopy \
	ddskk,trunk.lcopy \
	device-mapper-multipath,trunk.lcopy \
	dlm,trunk.lcopy \
	emacs,trunk.lcopy \
	fence,trunk.lcopy \
	fence-agents,trunk.lcopy \
	gauche,trunk.lcopy \
	gauche-mode,trunk.lcopy \
	gcc,trunk.lcopy \
	gdb,turnk.lcopy \
	gfs2-utils,trunk.lcopy \
	glib2,trunk.lcopy \
	glibc,trunk.lcopy \
	gnash,trunk.lcopy \
	goocanvas,trunk.lcopy \
	gstreamer,trunk.lcopy \
	gtk2,trunk.lcopy \
	hachoir,trunk.lcopy \
	hal,trunk.lcopy \
	httpclient,trunk.lcopy \
	kernel,kvm.lcopy \
	kernel,rt.lcopy \
	kernel,trunk.lcopy \
	kernel,xen-3_2.lcopy \
	lcopy,trunk.lcopy \
	libbonobo,trunk.lcopy \
	libvirt,trunk.lcopy \
	lm-sensors,trunk.lcopy \
	man-pages,trunk.lcopy \
	miniascape,trunk.lcopy \
	netbsd-kernel,trunk.lcopy \
	openais,trunk.lcopy \
	openid4java,trunk.lcopy \
	perg,trunk.lcopy \
	python-virtinst,trunk.lcopy \
	qemu,kvm.lcopy \
	qemu,trunk.lcopy \
	qt-jambi,trunk.lcopy \
	reactos,trunk.lcopy \
	resource-agents,trunk.lcopy \
	rgmanager,trunk.lcopy \
	rpm,rpm5.lcopy \
	rpm,trunk.lcopy \
	sbuild,trunk.lcopy \
	sop,trunk.lcopy \
	sos,trunk.lcopy \
	spice,qxl.lcopy \
	spice,trunk.lcopy \
	spice,vdesktop.lcopy \
	spice,vdi_agent.lcopy \
	spice,vdi_port.lcopy \
	spice,vdi_slirp.lcopy \
	srpmix,trunk.lcopy \
	stitch,trunk.lcopy \
	strace,trunk.lcopy \
	twig,trunk.lcopy \
	util-linux-ng,trunk.lcopy \
	virt-manager,trunk.lcopy \
	wfo,trunk.lcopy \
	wireshark,trunk.lcopy \
	with-log,trunk.lcopy \
	xorg-x11-server,trunk.lcopy \
	xtrace,trunk.lcopy \
	ymacs,trunk.lcopy \
	zsh,trunk.lcopy \
	\
	$(NULL)
