confddir = $(sysconfdir)/lcopy/conf.d
dist_confd_DATA = \
	\
	binutils,trunk.lcopy			\
	ddskk,trunk.lcopy			\
	gauche,trunk.lcopy			\
	gauche-mode,trunk.lcopy			\
	gnash,trunk.lcopy			\
	kernel,xen-3_2.lcopy			\
	libvirt,trunk.lcopy                     \
	qt-jambi,trunk.lcopy                    \
	\
	$(NULL)
