confddir = $(sysconfdir)/lcopy/conf.d
dist_confd_DATA = \
	\
A         ConsoleKit,trunk.lcopy
A         anaconda,trunk.lcopy
A         autoconf,trunk.lcopy
A         automake,trunk.lcopy
A         biwascheme,trunk.lcopy
A         cairo,trunk.lcopy
A         corosync,trunk.lcopy
A         glib2,trunk.lcopy
A         glibc,trunk.lcopy
A         goocanvas,trunk.lcopy
A         gstreamer,trunk.lcopy
A         gtk2,trunk.lcopy
A         hal,trunk.lcopy
A         kernel,rt.lcopy
A         kernel,trunk.lcopy
A         man-pages,trunk.lcopy
A         sos,trunk.lcopy
A         wireshark,trunk.lcopy
	ConsoleKit,trunk.lcopy \
	anaconda,trunk.lcopy \
	autoconf,trunk.lcopy \
	automake,trunk.lcopy \
	binutils,trunk.lcopy \
	biwascheme,trunk.lcopy \
	cairo,trunk.lcopy \
	corosync,trunk.lcopy \
	ddskk,trunk.lcopy \
	gauche,trunk.lcopy \
	gauche-mode,trunk.lcopy \
	glib2,trunk.lcopy \
	glibc,trunk.lcopy \
	gnash,trunk.lcopy \
	goocanvas,trunk.lcopy \
	gstreamer,trunk.lcopy \
	gtk2,trunk.lcopy \
	hal,trunk.lcopy \
	kernel,rt.lcopy \
	kernel,trunk.lcopy \
	kernel,xen-3_2.lcopy \
	libvirt,trunk.lcopy \
	man-pages,trunk.lcopy \
	qt-jambi,trunk.lcopy \
	sos,trunk.lcopy \
	wireshark,trunk.lcopy \
	\
	$(NULL)
