cradleconfdir=$(pkgdatadir)/cradle-confs
dist_cradleconf_DATA =				\
	ftp.redhat.com				\
	kojipkgs.fedoraproject.org		\
	jpackage-generic                        \
	rpmfusion-free-rawhide-source           \
	user					\
	\
	mirror.centos.org                       \
	\
	download.opensuse.org                   \
	\
	lcopy.sys				\
	lcopy.user				\
	\
	$(NULL)
