crondailydir=$(sysconfdir)/cron.daily
dist_crondaily_SCRIPTS =        \
	\
	sop-010-mirror				\
	sop-020-hardlink-mirror			\
        sop-030-backup				\
        sop-040-hardlink-backup			\
        sop-060-build                           \
        sop-080-hardlink-deployed               \
	\
	$(NULL)
